# pmod

./: .taskfile  README.md  compose.yml  cspell.json  cspell.txt  howto.md  mise.toml  pyproject.toml  requirements.txt  venv.sh
.devcontainer/: devcontainer.json
pmod/: __init__.py  core.py  dbx.py  eval.py  ext.py  script_server.py  script_server_model.py  script_server_user_func.py  script_server_util.py
temp/: pyproject-back.toml-back
test/: test_db.py  test_eval_print.py  test_http.py  test_one.py
