[build-system]
requires = ["setuptools >= 65.5.0", "setuptools_scm >= 8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmod"
authors = [
    {name = "Andy Pangaribuan", email = "iam.pangaribuan@gmail.com"}
]
description = "python module"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv >= 1.0.0",
    "rich >= 13.7.1",
    "requests >= 2.31.0",
    "grpcio >= 1.65.4",
    "grpcio-tools >= 1.65.4",
    "psycopg2 >= 2.9.7",
]